--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,12 +1,49 @@
 body{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+background-color: rgba(9, 173, 238, 0.199);
+box-sizing: border-box;
+background-image: -o-linear-gradient(0%);
+font-weight: lighter;
 }
-header nav ul{
+
+header {
+    background-color: #1772cd;
+    padding: 1rem;
+    border-bottom: 2px solid #ddd;
+  }
+  .menu {
     display: flex;
     list-style: none;
-    gap: 30px;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    gap: 7rem;
+  }
+  .menu-item {
+    font-size: 1.2rem;
+  }
+  .menu-link {
+    text-decoration: none;
+    color: #f7f5f5e1;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    transition: color 0.3s ease;
+  }
+  .menu-link:hover {
+    color: #1fd328;
+  }
+  .icon {
+    font-size: 1.5rem;
+  }
+header nav ul{
+    display: flex;
+    list-style-position: unset;
+    gap: 30%;
+    padding-inline: 0%;
 }
 header nav ul li a{
-    text-decoration: none;
     color: black;
+    background-color: rgba(141, 0, 0, 0.839);
+    padding-inline-start: 0%;
 }
+
